--- a/src/teachings/es/DNA-Sequenzierung.mdx
+++ b/src/teachings/es/DNA-Sequenzierung.mdx
@@ -3,6 +3,8 @@ title: DNA-Sequenzierung (Sequenzdiagramme)
 description: Sequenzdiagramme und Szenarien
 order: 4
 author: Kristina Pankert
+date: 10/02/2023
+tags: [Sequenzdiagramme, SD]
 ---
 
 ### Sequenzdiagramme (SD)
